My-jquery Email Done

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
   <style media="screen">
       .warna {
       border-style: solid;
-      border-color: red;
+      border-color: black;
     }
   </style>
 </head>
 <body>
+  <form name="kotak">
     <p>Input Email :</p>
-      <input class="warna" id='email' border="1px">
+      <input class="warna" id='email' name="box" border="1px">
   <h2 id='result'></h2>
+  </form>
 </body>
 <script src="index.js"></script>
 
