--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <form action="#" method="post">
       <table>
         <tr>
-          <td><input id="email" type="text" name="email" placeholder="ex: example@ex.com"></td>
+          <td><input id="email" type="email" name="email" placeholder="ex: example@ex.com"></td>
           <td><span id="message"></span></td>
         </tr>
       </table>
