--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <title></title>
   </head>
   <body>
-    <input class="email" type="text" name="" value="" placeholder="inser your email here">
-    <input class="hidemsg" type="text" name="" value="" style="border: 0px solid #000000;">
-
+    <input class="email" type="text" name="" value="" placeholder="insert your email here">
+    <span class="invalid" style="display:none;color:red">Email address is not valid</span>
   </body>
   <script
 			  src="https://code.jquery.com/jquery-3.2.1.min.js"
